# vega-python-protos

./: .env  .gitignore  Makefile  README.md  pyproject.toml
tests/: test_protos.py
vega_python_protos/: __init__.py  buf.gen.yaml  generate.py  post-generate.sh
vega_python_protos/protos/blockexplorer/api/v1/: blockexplorer_pb2.py
vega_python_protos/protos/data_node/api/v2/: trading_data_pb2.py  trading_data_pb2.pyi  trading_data_pb2_grpc.py
vega_python_protos/protos/vega/: governance_pb2.py  governance_pb2.pyi  markets_pb2.py  markets_pb2.pyi  vega_pb2.py  vega_pb2.pyi
vega_python_protos/protos/vega/api/v1/: core_pb2.py  corestate_pb2.py
vega_python_protos/protos/vega/checkpoint/v1/: checkpoint_pb2.py  checkpoint_pb2.pyi
vega_python_protos/protos/vega/commands/v1/: commands_pb2.py  commands_pb2.pyi
vega_python_protos/protos/vega/events/v1/: events_pb2.py  events_pb2.pyi
vega_python_protos/protos/vega/snapshot/v1/: snapshot_pb2.py  snapshot_pb2.pyi
