[tool.poetry]
name = "vega-python-protos"
version = "0.1.0"
description = ""
authors = ["Charlie <charlie@vegaprotocol.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
black = "^24.4.0"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
jinja2 = "^3.1.3"
pytest = "*"
protoc-gen-openapiv2 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
